syntax = "proto3";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
    package_name: "io.logbee.keyscore.commons.replication.internal.proto"
    flat_package: true
};

message Payload {
    bytes bytes = 1;
    sint32 serializerId = 2;
    string manifest = 3;
}

message Entry {
    uint64 index = 1;
    uint64 term = 2;
    Payload payload = 3 [(scalapb.field).no_box = true];
}

message AppendEntryMessage {
    uint64 index = 1;
    uint64 term = 2;
    uint64 committedIndex = 3;
    uint64 previousTerm = 4;
    bytes payload = 5;
    string replyTo = 6;
}

message CommitEntryMessage {
    uint64 index = 2;
    string replyTo = 6;
}
